--- a/style_2.css
+++ b/style_2.css
@@ -1,3 +1,8 @@
-.padding-15px {
-    padding-left: -15px;
+.no-gutter > [class*='col-'] {
+    padding-right:0;
+    padding-left:0;
+}
+
+.img-responsive {
+    display: inline-block;
 }
