--- a/style_2.css
+++ b/style_2.css
@@ -5,11 +5,10 @@
 
 .img-responsive {
     display: inline-block;
+    width: 300px;
 }
 
 .img-fluid{
     width: 200px;
     height: auto;
-    border: 1px gray;
-    border-radius: 5px;
 }
