--- a/style_2.css
+++ b/style_2.css
@@ -1,6 +1,11 @@
-.no-gutter > [class*='col-'] {
-    padding-right:0;
-    padding-left:0;
+html {
+    font-size: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.no-gutter>[class*='col-'] {
+    padding-right: 0;
+    padding-left: 0;
 }
 
 .img-responsive {
@@ -8,7 +13,7 @@
     width: 300px;
 }
 
-.img-fluid{
+.img-fluid {
     width: 200px;
     height: auto;
 }
