--- a/style_2.css
+++ b/style_2.css
@@ -1,6 +1,5 @@
 html {
-    font-size: 100%;
-    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1rem;
 }
 
 .no-gutter>[class*='col-'] {
